solved news difference of widths on mobile

--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -20,8 +20,8 @@
     }
 
     &--item{
-      width: auto;
-      height: auto;
+      width: 100%;
+      height: 100%;
       gap: 1.5em;
       @include mx.media(){ gap: 1em; }
     }
